src/syntax.txt
sep = [any-bidi-bracket;.@*+'"!]
open-scope = ᚜
close-scope = ᚛
scope(type) = open-scope type* close-scope
expr = lit | stmt | application | quoted
lit = boolean | number | ident | string
boolean = & | '|' | ?
number = (0x)?[A-Z0-1]+(.[A-Z0-1]+)?
ident = [^sep|boolean]
string = .[anything-beside-for.].
stmt = if | unless | until | go-through | continue-doing | fn
if = if expr do scope(expr) otherwiswe scope(expr)
unless = unless expr than scope(expr) else scope(expr)
loop-expr = expr | stop expr | skip
until = until expr then scope(loop-expr)
go-through = go-through ident of expr scope(loop-expr)
continue-doing = continue-doing scope(loop-expr)
fn = fanction emoji? [0-9]*'*'|'+' scope(fn-expr)
fn-expr = expr | fn-ident
fn-ident = '|" [0-9]+ '|"
application = any-bidi-opening expr* any-bidi-closing
quoted = ;expr
comment = !.*\n
